fixed overflow

--- a/Project/assets/css/index.css
+++ b/Project/assets/css/index.css
@@ -135,7 +135,7 @@ a {
 */
 
 .dividergap {
-  display: flex;
+  display: flexbox;
 }
 
 .dividergap ul {
